--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 /* стиль для всего сайта */
 
+
 body {
     background: linear-gradient(135deg, #e9f0ff, #f8fbff);
     font-family: "Segoe UI", Tahoma, sans-serif;
@@ -88,13 +89,17 @@ button.btn-success:hover {
 
 
 
+
 footer {
-    margin-top: 500px;
-    background-color:#444f57;
+
+    display: flex;
+    flex-direction: column;
+     margin-top: 500px;
+    background:rgb(41, 40, 40);
     text-align: center;
     padding: 40px;
-    border-radius: 15px;
-    color:#0088cc
+    border-radius: 20px;
+    color:#0088cc;
 }
 
      
